# ZhuZhaoGUI

./: .gitignore  README.md
PhotometricStereo/: CMakeLists.txt  ExampleMain.cpp  PhotometricStereo.cpp  PhotometricStereo.h
ZhuZhaoGUI/: .gitignore  MainWindow.cpp  MainWindow.h  README.md  ZZListener.cpp  ZZListener.h  ZhuZhaoGUI.pro  ZhuZhaoGUI.vcxproj  ZhuZhaoGUI.vcxproj.filters  ZhuZhaoGUI_InterviewGuide.md  language_ch.ts  main.cpp
ZhuZhaoGUI/ZZConfigWidget/: ImageConvert.h  ZZConfigWidget.cpp  ZZConfigWidget.h  ZZOneParamWidget.cpp  ZZOneParamWidget.h  ZZProcessThread.cpp  ZZProcessThread.h
ZhuZhaoGUI/ZZLogWidget/: ZZLogMessage.cpp  ZZLogMessage.h  ZZLogWidget.cpp  ZZLogWidget.h
ZhuZhaoGUI/ZZThumWidget/: HThumbnailList.cpp  HThumbnailList.h  LitImgItemWidget.cpp  LitImgItemWidget.h  VThumbnailList.cpp  VThumbnailList.h
ZhuZhaoGUI/ZZViewWidget/: CustomGraphicsView.cpp  CustomGraphicsView.h  CustomImageItem.cpp  CustomImageItem.h  CustomImageView.cpp  CustomImageView.h
